<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:id="@+id/linearlayout"
    android:padding="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logox"/>

    <TextView
        android:id="@+id/tvMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="Hello there, welcome Back"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="Sign In to continue"
        android:textSize="18sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:text="Login"
            android:textColor="#fff"
            app:backgroundTint="#F44336" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:fontFamily="@font/antic"
            android:text="New User? Sign Up"
            android:textColor="@color/black"
            app:backgroundTint="#FFFFFF" />



        <!--        <TextView-->
        <!--            android:id="@+id/tvMargin"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="30dp"-->
        <!--            android:textSize="10sp" />-->

        <!--        <ImageView-->
        <!--            android:id="@+id/imgView"-->
        <!--            android:layout_width="100dp"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:src="@drawable/toplogo" />-->

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Login"-->
        <!--            android:textSize="40sp"-->
        <!--            android:gravity="center"-->
        <!--            android:textColor="@color/white"/>-->

        <!--        <EditText-->
        <!--            android:id="@+id/edtusername"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:hint="Enter username"-->
        <!--            android:textSize="40sp"-->
        <!--            android:gravity="center"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginLeft="20dp"-->
        <!--            android:layout_marginRight="20dp"-->
        <!--            android:background="@color/white"/>-->


        <!--        <EditText-->
        <!--            android:id="@+id/edtpassword"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:hint="Enter password"-->
        <!--            android:gravity="center"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:layout_marginLeft="20dp"-->
        <!--            android:layout_marginRight="20dp"-->
        <!--            android:textSize="40sp"-->
        <!--            android:background="@color/white"/>-->

        <!--        <Button-->
        <!--            android:id="@+id/btnLogin"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Login"-->
        <!--            android:textSize="30sp"-->
        <!--            android:layout_marginLeft="130dp"-->
        <!--            android:layout_marginRight="5dp"-->
        <!--            android:layout_marginTop="20dp" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/tvSignUp"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="No Account? SignUp"-->
        <!--            android:textStyle="bold"-->
        <!--            android:textSize="20sp"-->
        <!--            android:textColor="@color/white"-->
        <!--            />-->
    </LinearLayout>
</LinearLayout>