<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:src="@drawable/logox"/>

    <!--    <TextView-->
    <!--        android:id="@+id/tvMargin"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:fontFamily="@font/bungee"-->
    <!--        android:text=" welcome,"-->
    <!--        android:layout_marginTop="-30dp"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="20sp" />-->

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:layout_marginTop="-20dp"
        android:text="Sign Up to Start Your Journey"
        android:textSize="18sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="FirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtfname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="LastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtlname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#fff"
            android:backgroundTint="#F44336"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:fontFamily="@font/antic"
            android:text="Already Have an Account ! Login"
            android:textColor="@color/black"
            app:backgroundTint="#FFFFFF" />


    </LinearLayout>

</LinearLayout>